traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:15: error: Missing closing brace `}' assumed here
}  
^